--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ https://templatemo.com/tm-589-lugx-gaming
                       <li><a href="shop.html">Our Shop</a></li>
                       <li><a href="product-details.html">Product Details</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
-                      <li><a href="#">Sign In</a></li>
+                      <li><a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fwww.google.com%3Fhl%3Den-US&ec=GAlA8wE&hl=en&flowName=GlifWebSignIn&flowEntry=AddSession&dsh=S453412805%3A1706308678938519&theme=glif">Sign In</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -371,7 +371,7 @@ https://templatemo.com/tm-589-lugx-gaming
                   <h6>Our Shop</h6>
                   <h2>Go Pre-Order Buy & Get Best <em>Prices</em> For You!</h2>
                 </div>
-                <p>Lorem ipsum dolor consectetur adipiscing, sed do eiusmod tempor incididunt.</p>
+                <p></p>
                 <div class="main-button">
                   <a href="shop.html">Shop Now</a>
                 </div>
