--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@ https://templatemo.com/tm-589-lugx-gaming
               <h6>Contact Us</h6>
               <h2>Say Hello!</h2>
             </div>
-            <p>LUGX Gaming Template is based on the latest Bootstrap 5 CSS framework. This template is provided by TemplateMo and it is suitable for your gaming shop ecommerce websites. Feel free to use this for any purpose. Thank you.</p>
+            <p> Thank you.</p>
             <ul>
               <li><span>Address</span> Sunny Isles Beach, FL 33160, United States</li>
               <li><span>Phone</span> +123 456 7890</li>
@@ -155,7 +155,7 @@ https://templatemo.com/tm-589-lugx-gaming
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2024 SADBOX. All rights reserved.    SAD-BOX &nbsp;&nbsp; <a rel="nofollow" href="https://www.instagram.com/sadjed._6/?hl=en" target="_blank">Design: TemplateMo</a></p>
       </div>
     </div>
   </footer>
