--- a/music.html
+++ b/music.html
@@ -6,8 +6,8 @@
     <title>AU</title>
 </head>
 <body>
-    <audio controls autoplay muted loop>
-        <source src="New Moon.mp3">
+    <audio  autoplay>
+        <source src="x2mate.com - [FREE] Fast Aggressive 808 Rap Beat -BLAST- - AFRO TRAP Instrumental - Free Type Beat - (320 kbps)">
         <source src="">
         This browser does not support HTML5 audio
     </audio>
