--- a/index.html
+++ b/index.html
@@ -2,28 +2,19 @@
 <html lang="en">
 
   <head>
-<audio  autoplay>
-    <source src="/x2mate.com - [FREE] Fast Aggressive 808 Rap Beat -BLAST- - AFRO TRAP Instrumental - Free Type Beat - (320 kbps).mp3
-" type="audio/mp3">
-   
+
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>SADBOX Gaming</title>
-<audio  autoplay>
-    <source src="/x2mate.com - [FREE] Fast Aggressive 808 Rap Beat -BLAST- - AFRO TRAP Instrumental - Free Type Beat - (320 kbps).mp3
-" type="audio/mp3">
-   
-</audio>
+
+
   <!-- Bootstrap core CSS -->
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-   <audio controls>
-        <source src="sad.mp3" type="audio/mp3">
-        
-    </audio>
+
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
@@ -39,7 +30,23 @@ https://templatemo.com/tm-589-lugx-gaming
 
 -->
   </head>
+    <style>
+        /* إخفاء زر التشغيل */
+        #audioPlayer {
+            display: none;
+        }
+    </style>
+</head>
 
+<body>
+
+    <!-- ... الأكواد الرئيسية ... -->
+
+    <!-- إضافة عنصر الصوت مع autoplay وبدون controls -->
+    <audio id="audioPlayer" autoplay>
+        <source src="اسم-الملف-الصوتي.mp3" type="audio/mp3">
+        تأكد من دعم متصفحك لعنصر audio.
+    </audio>
 <body>
 
   <!-- ***** Preloader Start ***** -->
