--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-589-lugx-gaming
 
     <!-- إضافة عنصر الصوت مع autoplay وبدون controls -->
     <audio id="audioPlayer" autoplay>
-        <source src="اسم-الملف-الصوتي.mp3" type="audio/mp3">
+        <source src="sad.mp3" type="audio/mp3">
         تأكد من دعم متصفحك لعنصر audio.
     </audio>
 <body>
