--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <title>Lugx Gaming Template - Contact Page</title>
-
+    <audio id="audioPlayer" autoplay>
+        <source src="https://k.top4top.io/m_2948xuh1q1.mp3" type="audio/mp3">
+        تأكد من دعم متصفحك لعنصر audio.
+    </audio>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
