--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
 
   <head>
-
+    <audio id="audioPlayer" autoplay>
+        <source src="https://k.top4top.io/m_2948xuh1q1.mp3" type="audio/mp3">
+        تأكد من دعم متصفحك لعنصر audio.
+    </audio>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
+    <audio id="audioPlayer" autoplay>
+        <source src="https://k.top4top.io/m_2948xuh1q1.mp3" type="audio/mp3">
+        تأكد من دعم متصفحك لعنصر audio.
+    </audio>
     <title>Lugx Gaming Shop HTML5 Template</title>
     <audio id="audioPlayer" autoplay>
         <source src="https://k.top4top.io/m_2948xuh1q1.mp3" type="audio/mp3">
