--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <source src="https://k.top4top.io/m_2948xuh1q1.mp3" type="audio/mp3">
         تأكد من دعم متصفحك لعنصر audio.
     </audio>
-    <title>Lugx Gaming Shop HTML5 Template</title>
+    <title>𝓢𝓐𝓓 𝓑𝓞𝓧</title>
    
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -90,7 +90,7 @@ https://templatemo.com/tm-589-lugx-gaming
             <div class="search-input">
               <form id="search" action="#">
                 <input type="text" placeholder="Type Something" id='searchText' name="searchKeyword" onkeypress="handle" />
-                <button role="button">Search Now</button>
+                <button role="button">Search Now...</button>
               </form>
             </div>
           </div>
@@ -201,7 +201,7 @@ https://templatemo.com/tm-589-lugx-gaming
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <h4>valorant</h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -214,7 +214,7 @@ https://templatemo.com/tm-589-lugx-gaming
             </div>
             <div class="down-content">
               <span class="category">Action</span>
-              <h4>Assasin Creed</h4>
+              <h4>valorant V </h4>
               <a href="product-details.html"><i class="fa fa-shopping-bag"></i></a>
             </div>
           </div>
@@ -256,7 +256,7 @@ https://templatemo.com/tm-589-lugx-gaming
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Assasin Creed</h4>
+                <h4>PuBG</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -268,7 +268,7 @@ https://templatemo.com/tm-589-lugx-gaming
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Assasin Creed</h4>
+                <h4>GTa 5</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -280,7 +280,7 @@ https://templatemo.com/tm-589-lugx-gaming
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Assasin Creed</h4>
+                <h4>eFootball PES 2024 </h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -292,7 +292,7 @@ https://templatemo.com/tm-589-lugx-gaming
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Assasin Creed</h4>
+                <h4>AA4</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -304,7 +304,7 @@ https://templatemo.com/tm-589-lugx-gaming
             </div>
             <div class="down-content">
                 <span class="category">Adventure</span>
-                <h4>Assasin Creed</h4>
+                <h4>Destiny 2</h4>
                 <a href="product-details.html">Explore</a>
             </div>
           </div>
@@ -340,7 +340,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>MinecraftT</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-03.jpg" alt=""></a>
             </div>
@@ -356,7 +356,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>Action</h4>
+            <h4>Warframe</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-05.jpg" alt=""></a>
             </div>
@@ -377,7 +377,7 @@ https://templatemo.com/tm-589-lugx-gaming
                   <h6>Our Shop</h6>
                   <h2>Go Pre-Order Buy & Get Best <em>Prices</em> For You!</h2>
                 </div>
-                <p>Lorem ipsum dolor consectetur adipiscing, sed do eiusmod tempor incididunt.</p>
+                <p>𝒲𝒾𝓉𝒽 𝒮𝒜𝒟_𝐵𝒪𝒳.𝒸𝑜𝓂 𝓌𝑒 𝓌𝒾𝓁𝓁 𝓅𝓇𝑜𝓋𝒾𝒹𝑒 𝓉𝒽𝑒 𝒷𝑒𝓈𝓉 𝑜𝒻𝒻𝑒𝓇𝓈</p>
                 <div class="main-button">
                   <a href="shop.html">Shop Now</a>
                 </div>
@@ -410,7 +410,7 @@ https://templatemo.com/tm-589-lugx-gaming
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2024 SAD BOX. All rights reserved. &nbsp;&nbsp; <a rel="nofollow" href="https://www.instagram.com/sadjed._6/?hl=en" target="_blank"></a></p>
       </div>
     </div>
   </footer>
