--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ https://templatemo.com/tm-589-lugx-gaming
           <div class="caption header-text">
             <h6>Welcome to lugx</h6>
             <h2>BEST GAMING SITE EVER!</h2>
-            <p>LUGX Gaming is free Bootstrap 5 HTML CSS website template for your gaming websites. You can download and use this layout for commercial purposes. Please tell your friends about TemplateMo.</p>
+            <p>𝒲𝒾𝓉𝒽 𝒮𝒜𝒟_𝐵𝒪𝒳.𝒸𝑜𝓂 𝓌𝑒 𝓌𝒾𝓁𝓁 𝓅𝓇𝑜𝓋𝒾𝒹𝑒 𝓉𝒽𝑒 𝒷𝑒𝓈𝓉 𝑜𝒻𝒻𝑒𝓇𝓈 </p>
             <div class="search-input">
               <form id="search" action="#">
                 <input type="text" placeholder="Type Something" id='searchText' name="searchKeyword" onkeypress="handle" />
@@ -340,7 +340,7 @@ https://templatemo.com/tm-589-lugx-gaming
         </div>
         <div class="col-lg col-sm-6 col-xs-12">
           <div class="item">
-            <h4>MinecraftT</h4>
+            <h4>Minecraft</h4>
             <div class="thumb">
               <a href="product-details.html"><img src="assets/images/categories-03.jpg" alt=""></a>
             </div>
