--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
      <link rel="shortcut icon" href="images/favicon.png" type="">
+        <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5;url=https://sad2310.github.io/SAD_BOX">
+    <title>تحميل...</title>
+    <!-- إضافة favicon -->
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <audio id="audioPlayer" autoplay>
         <source src="https://k.top4top.io/m_2948xuh1q1.mp3" type="audio/mp3">
         تأكد من دعم متصفحك لعنصر audio.
     </audio>
+    
     <title>𝓢𝓐𝓓 𝓑𝓞𝓧</title>
    
     <!-- Bootstrap core CSS -->
