--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 
   <head>
     <audio id="audioPlayer" autoplay>
-        <source src="assets/images/saf" type="audio/mp3">
+        <source src="assets/images/saf.mp3" type="audio/mp3">
         تأكد من دعم متصفحك لعنصر audio.
     </audio>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
      <link rel="shortcut icon" href="images/favicon.png" type="">
         <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5;url=https://sad2310.github.io/SAD_BOX">
-    <title>تحميل...</title>
+
     <!-- إضافة favicon -->
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <audio id="audioPlayer" autoplay>
-        <source src="assets/images/saf" type="audio/mp3">
+        <source src="assets/images/saf.mp3" type="audio/mp3">
         تأكد من دعم متصفحك لعنصر audio.
     </audio>
     
