--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <source src="assets/images/saf.mp3" type="audio/mp3">
         تأكد من دعم متصفحك لعنصر audio.
     </audio>
-    
+     <link rel="shortcut icon" href="images/favicon.png" type="">
     <title>𝓢𝓐𝓓 𝓑𝓞𝓧</title>
-   
+    <link rel="shortcut icon" href="images/favicon.png" type="">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
