--- a/index.html
+++ b/index.html
@@ -3,21 +3,33 @@
 
   <head>
     <audio id="audioPlayer" autoplay>
-        <source src="assets/images/saf.mp3" type="audio/mp3">
+        <source src="https://i.top4top.io/m_2952ihunm1.mp3" type="audio/mp3">
         تأكد من دعم متصفحك لعنصر audio.
     </audio>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
      <link rel="shortcut icon" href="images/favicon.png" type="">
         <meta charset="UTF-8">
-
+        <audio id="audioPlayer" autoplay>
+        <source src="https://i.top4top.io/m_2952ihunm1.mp3" type="audio/mp3">
+        تأكد من دعم متصفحك لعنصر audio.
+    </audio>
+    <style>
+        /* تخصيص السهم */
+        .arrow {
+            font-size: 24px; /* حجم السهم */
+            color: #007bff; /* لون السهم */
+            display: inline-block;
+            transform: rotate(-45deg); /* تدوير السهم */
+        }
+    </style>
     <!-- إضافة favicon -->
     <link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
     
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <audio id="audioPlayer" autoplay>
-        <source src="assets/images/saf.mp3" type="audio/mp3">
+        <source src="https://i.top4top.io/m_2952ihunm1.mp3" type="audio/mp3">
         تأكد من دعم متصفحك لعنصر audio.
     </audio>
      <link rel="shortcut icon" href="images/favicon.png" type="">
@@ -35,9 +47,7 @@
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
 <!--
 
-TemplateMo 589 lugx gaming
 
-https://templatemo.com/tm-589-lugx-gaming
 
 -->
   </head>
@@ -92,7 +102,7 @@ https://templatemo.com/tm-589-lugx-gaming
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="caption header-text">
-            <h6>Welcome to lugx</h6>
+            <h6>Welcome to SAD BOX </h6>
             <h2>BEST GAMING SITE EVER!</h2>
             <p>𝒲𝒾𝓉𝒽 𝒮𝒜𝒟_𝐵𝒪𝒳.𝒸𝑜𝓂 𝓌𝑒 𝓌𝒾𝓁𝓁 𝓅𝓇𝑜𝓋𝒾𝒹𝑒 𝓉𝒽𝑒 𝒷𝑒𝓈𝓉 𝑜𝒻𝒻𝑒𝓇𝓈 </p>
             <div class="search-input">
