--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
      <link rel="shortcut icon" href="images/favicon.png" type="">
+        <audio id="audioPlayer" autoplay>
+        <source src="https://i.top4top.io/m_2952ihunm1.mp3" type="audio/mp3">
+        تأكد من دعم متصفحك لعنصر audio.
+    </audio>
     <title>𝓢𝓐𝓓 𝓑𝓞𝓧</title>
     <link rel="shortcut icon" href="images/favicon.png" type="">
     <!-- Bootstrap core CSS -->
