--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,8 @@
 
     <title>SAD BOX - Contact Page</title>
     <audio id="audioPlayer" autoplay>
-        <source src="https://i.top4top.io/m_2952ihunm1.mp3" type="audio/mp3">
+        <source src="assets/images/sad.mp3" type="audio/mp3">
         تأكد من دعم متصفحك لعنصر audio.
-    </audio>
     </audio>
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -157,7 +156,7 @@
   <footer>
     <div class="container">
       <div class="col-lg-12">
-        <p>Copyright © 2024 SADBOX. All rights reserved.    SAD-BOX &nbsp;&nbsp; <a rel="nofollow" href="https://www.instagram.com/sadjed._6/?hl=en" target="_blank">Design: TemplateMo</a></p>
+        <p>Copyright © 2024 SADBOX. All rights reserved.    SAD-BOX &nbsp;&nbsp; <a rel="nofollow" href="https://www.instagram.com/sadjed._6/?hl=en" target="_blank"></a></p>
       </div>
     </div>
   </footer>
